# portalbarriosprivados

./: .env  AI_SYSTEM_DOCUMENTATION.md  CHANGELOG.md  CHATBOT_CHANGES_SUMMARY.md  CHATBOT_CLAUDE_SETUP.md  CHATBOT_README.md  CHATBOT_SETUP.md  CONFIGURACION_USUARIOS.md  CORRECCIONES_FINALES.md  CORRECCION_BOTON_PANICO.md  CORRECCION_CONTEXTO_APLICACION.md  CORRECCION_DASHBOARD_REDIRECTS.md  CORRECCION_DEPENDENCIAS_COMPLETADA.md  CORRECCION_FASES_COMPLETADA.md  CORRECCION_MONITOREO_PRODUCCION.md  CORRECCION_MONITOREO_SEGURIDAD.md  CORRECCION_NOTICIAS_PRODUCCION.md  CORRECCION_USUARIOS_DASHBOARD.md  DATABASE_FIX_INSTRUCTIONS.md  DEBUG_EXPENSE_NOTIFICATIONS.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SOLUTION.md  EMAIL_FIX_INSTRUCTIONS.md  ESTADO_ACTUAL_SISTEMA.md  EXPENSE_NOTIFICATIONS_FIX.md  FRONTEND_FIX_SUMMARY.md  IMPLEMENTACION_COMPLETADA.md  MEJORAS_CRITICAS_IMPLEMENTADAS.md  MEJORAS_LOGS_PRODUCCION.md  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  PHASE3_COMPLETED.md  PHASE4_COMPLETED.md  PHASE5_COMPLETED.md  PHASE6_COMPLETED.md  Procfile  README.md  README_DEPLOYMENT.md  (+89 more)
api/v1/: __init__.py  auth.py  dashboard.py  notifications.py  users.py
app/core/: __init__.py  backup_service.py  config_validator.py  database_optimizer.py  error_handler.py  logging_service.py  monitoring_service.py  testing_service.py
app/schemas/: validation_schemas.py
app/services/: __init__.py  auth_service.py  cache_service.py  query_optimizer.py  security_service.py  two_factor_service.py  user_service.py
app/utils/: asset_optimizer.py
app_modules/api/: __init__.py
app_modules/core/: error_handler.py  testing_service.py
app_modules/schemas/: validation_schemas.py
app_modules/services/: query_optimizer.py  user_service.py  websocket_service.py
instance/: barrio_cerrado.db
migrations/: README.md
routes/: __init__.py  admin.py  api.py  auth.py  broadcast_communications.py  camera_security.py  chatbot.py  classifieds.py  expense_notifications.py  expenses.py  external_routes.py  main.py  maintenance.py  map.py  news.py  premium_routes.py  reservations.py  scalability_routes.py  security.py  smart_maintenance.py  user_management.py  visits.py
services/: user_service.py
static/css/: premium-ux.css  style.css
static/images/: tejas4-map-analysis.js
static/js/: app.js  performance-optimizer.js  premium-ux.js
templates/: base.html  dashboard.html  index.html  map.html  map_original.html  notifications.html  premium_dashboard.html  profile.html
templates/admin/: dashboard.html  email_config.html  reports.html  settings.html
templates/auth/: change_password.html  forgot_password.html  login.html  register.html  reset_password.html
templates/broadcast_communications/: index.html  templates.html
templates/camera_security/: index.html
templates/chatbot/: index.html
templates/classifieds/: edit.html  index.html  my_classifieds.html  new.html  view.html
templates/errors/: 403.html  404.html  500.html
tests/: __init__.py  test_auth_service.py
(+39 files in other folders)
