[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portalbarriosprivados"
version = "1.0.0"
description = "Portal de Barrios Privados - Sistema de gestión integral"
authors = [
    {name = "Manuel", email = "manuel@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Flask>=2.3.3",
    "Flask-SQLAlchemy>=3.0.5",
    "Flask-Login>=0.6.3",
    "Flask-SocketIO>=5.3.6",
    "Flask-Mail>=0.9.1",
    "Flask-WTF>=1.1.1",
    "Flask-Migrate>=4.0.7",
    "Flask-CORS>=4.0.0",
    "Flask-RESTful>=0.3.10",
    "Flask-Caching>=2.1.0",
    "Werkzeug>=2.3.7",
    "SQLAlchemy>=2.0.36",
    "python-dotenv>=1.0.0",
    "Jinja2>=3.1.2",
    "WTForms>=3.0.1",
    "email-validator>=2.0.0",
    "gunicorn>=21.2.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "Pillow>=10.4.0",
    "qrcode>=7.4.2",
    "mercadopago>=2.2.0",
    "twilio>=8.5.0",
    "openai>=1.35.0",
    "anthropic>=0.64.0",
    "eventlet>=0.33.3",
    "PyJWT>=2.8.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "marshmallow>=3.20.2",
    "marshmallow-sqlalchemy>=0.29.0",
    "flask-limiter>=3.5.0",
    "sentry-sdk[flask]>=1.40.0",
    "pyotp>=2.9.0",
    "cssmin>=0.2.0",
    "jsmin>=3.0.1",
    "psutil>=5.9.6",
    "APScheduler>=3.10.4",
    "Babel>=2.13.1",
    "schedule>=1.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "googlemaps>=4.10.0",
    "docker>=6.1.0",
    "boto3>=1.28.0",
    "sendgrid>=6.10.0",
    "stripe>=6.6.0",
    "paypalrestsdk>=1.13.0",
    "openweathermap>=0.1.0",
    "geopy>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-json-report>=1.5.0",
    "factory-boy>=3.3.0",
    "faker>=19.12.0",
    "coverage>=7.3.2",
    "selenium>=4.15.2",
    "webdriver-manager>=4.0.1",
]

[tool.setuptools]
packages = ["portalbarriosprivados"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
